# zats-greenscore

./: .dockerignore  .gitignore  404.html  48_CAT_Sustainable_API_GreenScore_V1-2.xlsx  CHANGELOG.md  CLAUDE.md  Dockerfile  README.md  astro.config.mjs  docker-compose.yml  eslint.config.mjs  index.html  module.d.ts  nginx.conf  package-lock.json  package.json  playwright.config.ts  tsconfig.app.json  vite.config.ts  vitest.config.ts
.agents/: architecture-reviewer.md
.claude/: settings.local.json
.claude/commands/: build-desktop.md  build.md  dev-desktop.md  dev.md  new-component.md  new-page.md  review.md
.claude/rules/: quality.md  rules.md  security.md  tauri.md
.github/workflows/: cellar-deploy.yml  firebase-hosting-deploy.yml  gcp-deploy.yml  publish-on-merge.yml  release-desktop.yml
docs/: deployment.md
docs/specs/: glossary.md  overview.md
e2e/: audit-apigreenscore.spec.ts  audit-eroom.spec.ts  navigation.spec.ts  project-lifecycle.spec.ts  theme.spec.ts
plans/: eroom-evolution.md  issue-46-separate-diagnostics.md
public/ressources/: utils.js
scripts/: deploy-cellar.sh  gen-og-image.mjs  verify_scoring.js
src/: App.vue  main.ts
src-tauri/: Cargo.toml  tauri.conf.json
src-tauri/icons/: icon.icns
src-tauri/src/: lib.rs
src/components/: AppFooter.vue  AppHeader.vue  BarChart.astro  CoreUiToast.vue  ProjectCard.astro  RadarChart.astro  ScoreBadge.astro  ThemeToggle.astro  WelcomeHero.astro
src/config/: fields-detail.json  outputs.ts
src/data/: about-content.json  apigreenscore-survey-questions.json  doc-content.json  (+3 more)
tests/: setup.ts
(+145 files in other folders)
