[package]
name = "app"
version = "0.1.0"
description = "the zats-greenscore Tauri App"
authors = ["Emmanuel Peru <eperu@zatsit.fr>"]
license = "MIT License"
repository = "https://github.com/zatsit-oss/zats-greenscore"
edition = "2021"
rust-version = "1.77.2"

[lib]
name = "app_lib"
crate-type = ["staticlib", "cdylib", "rlib"]

[build-dependencies]
tauri-build = { version = "2.5.3", features = [] }

[dependencies]
serde_json = "1.0"
serde = { version = "1.0", features = ["derive"] }
log = "0.4"
tauri = { version = "2.9.5", features = [] }
tauri-plugin-log = "2"
open = "5"
